--- a/src/core/framelesshelpercore.qrc
+++ b/src/core/framelesshelpercore.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/org.wangwenx190.FramelessHelper">
         <file>resources/fonts/Micon.ttf</file>
+        <file>resources/images/noise.png</file>
     </qresource>
 </RCC>
